// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should call remove on close button click 1`] = `
<Alert
  actions={
    Object {
      "dismissAlertMessage": [MockFunction] {
        "calls": Array [
          Array [
            1,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  alerts={
    Array [
      Object {
        "detail": "More words",
        "id": 1,
        "message": "Test message",
        "type": "error",
      },
    ]
  }
>
  <div
    className="alert-container  mko_vqnh6x-container"
  >
    <AlertMessage
      detail="More words"
      expandDetail={[Function]}
      id={1}
      isExpanded={false}
      key="1"
      message="Test message"
      remove={
        [MockFunction] {
          "calls": Array [
            Array [
              1,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="error"
    >
      <div
        className="alert alert--error  mko_vqnh6x-alert  mko_vqnh6x-error"
      >
        <div
          className="alert__content  mko_vqnh6x-alert__content"
        >
          <div
            className="alert__message  mko_vqnh6x-alert__message"
          >
            <div
              className="alert__icon  mko_vqnh6x-alert__icon"
            />
            <div
              className="alert__title  mko_vqnh6x-alert__title"
            >
              Test message
            </div>
            <div
              className="alert__actions  mko_vqnh6x-alert__actions"
            >
              <Button
                className="alert__expand"
                onClick={[Function]}
                type="button"
              >
                <button
                  className="button ripple button--standard alert__expand  mko_1g3c03c-button  mko_1g3c03c-button_standard"
                  onClick={[Function]}
                  type="button"
                >
                  Details
                </button>
              </Button>
              <Button
                aria-label="Close Alert"
                className="alert__close  mko_vqnh6x-close"
                icon="╳︎"
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Close Alert"
                  className="button ripple button--icon alert__close  mko_vqnh6x-close  mko_1g3c03c-button  mko_1g3c03c-button_icon"
                  icon="╳︎"
                  onClick={[Function]}
                  type="button"
                />
              </Button>
            </div>
          </div>
          <div
            className="alert__details  mko_vqnh6x-alert__details"
          >
            More words
          </div>
        </div>
      </div>
    </AlertMessage>
  </div>
</Alert>
`;

exports[`Alert should expand alert on click 1`] = `
<Alert
  actions={
    Object {
      "dismissAlertMessage": [MockFunction],
    }
  }
  alerts={
    Array [
      Object {
        "detail": "More words",
        "id": 1,
        "message": "Test message",
        "type": "error",
      },
    ]
  }
>
  <div
    className="alert-container  mko_vqnh6x-container"
  >
    <AlertMessage
      detail="More words"
      expandDetail={[Function]}
      id={1}
      isExpanded={false}
      key="1"
      message="Test message"
      remove={[MockFunction]}
      type="error"
    >
      <div
        className="alert alert--error  mko_vqnh6x-alert  mko_vqnh6x-error"
      >
        <div
          className="alert__content  mko_vqnh6x-alert__content"
        >
          <div
            className="alert__message  mko_vqnh6x-alert__message"
          >
            <div
              className="alert__icon  mko_vqnh6x-alert__icon"
            />
            <div
              className="alert__title  mko_vqnh6x-alert__title"
            >
              Test message
            </div>
            <div
              className="alert__actions  mko_vqnh6x-alert__actions"
            >
              <Button
                className="alert__expand"
                onClick={[Function]}
                type="button"
              >
                <button
                  className="button ripple button--standard alert__expand  mko_1g3c03c-button  mko_1g3c03c-button_standard"
                  onClick={[Function]}
                  type="button"
                >
                  Details
                </button>
              </Button>
              <Button
                aria-label="Close Alert"
                className="alert__close  mko_vqnh6x-close"
                icon="╳︎"
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Close Alert"
                  className="button ripple button--icon alert__close  mko_vqnh6x-close  mko_1g3c03c-button  mko_1g3c03c-button_icon"
                  icon="╳︎"
                  onClick={[Function]}
                  type="button"
                />
              </Button>
            </div>
          </div>
          <div
            className="alert__details  mko_vqnh6x-alert__details"
          >
            More words
          </div>
        </div>
      </div>
    </AlertMessage>
  </div>
</Alert>
`;

exports[`Alert should expand alert on click 2`] = `
<Alert
  actions={
    Object {
      "dismissAlertMessage": [MockFunction],
    }
  }
  alerts={
    Array [
      Object {
        "detail": "More words",
        "id": 1,
        "message": "Test message",
        "type": "error",
      },
    ]
  }
>
  <div
    className="alert-container  mko_vqnh6x-container"
  >
    <AlertMessage
      detail="More words"
      expandDetail={[Function]}
      id={1}
      isExpanded={true}
      key="1"
      message="Test message"
      remove={[MockFunction]}
      type="error"
    >
      <div
        className="alert alert--error  mko_vqnh6x-alert  mko_vqnh6x-error"
      >
        <div
          className="alert__content alert__content--is-expanded  mko_vqnh6x-alert__content  mko_vqnh6x-alert__content_expanded"
        >
          <div
            className="alert__message  mko_vqnh6x-alert__message"
          >
            <div
              className="alert__icon  mko_vqnh6x-alert__icon"
            />
            <div
              className="alert__title  mko_vqnh6x-alert__title"
            >
              Test message
            </div>
            <div
              className="alert__actions  mko_vqnh6x-alert__actions"
            >
              <Button
                aria-label="Close Alert"
                className="alert__close  mko_vqnh6x-close"
                icon="╳︎"
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Close Alert"
                  className="button ripple button--icon alert__close  mko_vqnh6x-close  mko_1g3c03c-button  mko_1g3c03c-button_icon"
                  icon="╳︎"
                  onClick={[Function]}
                  type="button"
                />
              </Button>
            </div>
          </div>
          <div
            className="alert__details  mko_vqnh6x-alert__details"
          >
            More words
          </div>
        </div>
      </div>
    </AlertMessage>
  </div>
</Alert>
`;

exports[`Alert should render container when has alerts 1`] = `
<div
  className="alert-container  mko_vqnh6x-container"
>
  <AlertMessage
    detail="More words"
    expandDetail={[Function]}
    id={1}
    isExpanded={false}
    key="1"
    message="Test message"
    remove={[MockFunction]}
    type="error"
  />
</div>
`;
